force-app/main/default/objects/Job_Order__c/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>