force-app/main/default/objects/Job_Order__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Job Duration - weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>