force-app/main/default/objects/Job_Order__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School/GED</fullName>
            </value>
            <value>
                <fullName>Associates Degree</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree</fullName>
            </value>
            <value>
                <fullName>Master Degree</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>JD</fullName>
            </value>
            <value>
                <fullName>Other Advanced Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>