force-app/main/default/objects/Job_Order__c/fields/Fillability__c.field-meta.xml
<CustomField>
    <fullName>Fillability__c</fullName>
    <label>Fillability</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>