force-app/main/default/objects/Job_Order__c/fields/Job_Board__c.field-meta.xml
<CustomField>
    <fullName>Job_Board__c</fullName>
    <label>Job Board</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monster</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Glassdoor</fullName>
            </value>
            <value>
                <fullName>CareerBuilder</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Corporate Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>