force-app/main/default/objects/Job_Order__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line of Business 1</fullName>
            </value>
            <value>
                <fullName>Line of Business 2</fullName>
            </value>
            <value>
                <fullName>Line of Business 3</fullName>
            </value>
            <value>
                <fullName>Line of Business 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>