force-app/main/default/objects/Job_Order__c/fields/Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Orders (Point of Contact)</relationshipLabel>
    <relationshipName>Job_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>