force-app/main/default/objects/Job_Order__c/fields/Staffed_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Staffed_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staffed Candidate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Candidate Assigned</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Orders (Candidates)</relationshipLabel>
    <relationshipName>Job_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>