force-app/main/default/objects/Job_Order__c/listViews/Active_Job_Requests.listView-meta.xml
<ListView>
    <fullName>Active_Job_Requests</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Company__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Active Job Requests</label>
</ListView>